tests/errors/sem_array4.java
public class sem_array4 {
public static void main(String[] args){
String[] values;
String i = values[ true ];
}
}